[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/font/SimpleFont.fnt" type="BitmapFont" id=2]
[ext_resource path="res://scenes/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/mockbuster_logo.png" type="Texture" id=6]

[node name="Pause" type="Control"]
pause_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PausePopup" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PausePopup"]
margin_right = 1200.0
margin_bottom = 600.0
color = Color( 0, 0.478431, 0.552941, 0.768627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mockbuster_logo" type="Sprite" parent="CanvasLayer/PausePopup"]
position = Vector2( 600, 120 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="MainMenuButton" parent="CanvasLayer/PausePopup" instance=ExtResource( 1 )]
margin_top = 450.0
margin_bottom = 470.0
text = "MAIN MENU"

[node name="ContinueButton" parent="CanvasLayer/PausePopup" instance=ExtResource( 1 )]
margin_top = 250.0
margin_bottom = 270.0
text = "CONTINUE"

[node name="EndGameNode2D" type="Node2D" parent="CanvasLayer/PausePopup"]
visible = false
position = Vector2( 600, 250 )
scale = Vector2( 3, 3 )

[node name="Label" type="Label" parent="CanvasLayer/PausePopup/EndGameNode2D"]
margin_left = -151.0
margin_top = 5.0
margin_right = 151.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 0.607843, 0, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="CanvasLayer/PausePopup/MainMenuButton" to="CanvasLayer/PausePopup" method="_on_MainMenuButton_button_down"]
[connection signal="button_down" from="CanvasLayer/PausePopup/ContinueButton" to="CanvasLayer/PausePopup" method="_on_ContinueButton_button_down"]
